fix: fix subreddits overflowing grid container and set mobile to 768px
set subreddits grid column to max-content

--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,9 @@ a:hover {
   text-decoration: underline;
 }
 
-@media only screen and (min-width: 42.5rem) {
+@media only screen and (min-width: 48rem) {
   #root {
-    grid-template-columns:repeat(4, 1fr);
+    grid-template-columns:repeat(3, 1fr) max-content;
   }
 
   header {
@@ -67,7 +67,7 @@ a:hover {
 
 @media only screen and (min-width: 75rem) {
   #root {
-    grid-template-columns:repeat(5, 1fr);
+    grid-template-columns:repeat(4, 1fr) max-content;
   }
 
   main {
@@ -77,7 +77,7 @@ a:hover {
 
 @media only screen and (min-width: 100rem) {
   #root {
-    grid-template-columns:repeat(7, 1fr);
+    grid-template-columns:repeat(5, 1fr) max-content 1fr;
   }
 
   main {
